Adicionado código do desafio e módulo de hooks

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,6 @@ fundamentos/01-fundamentos-reactjs/node_modules
 fundamentos/01-fundamentos-reactjs/dist
 fundamentos/01-fundamentos-reactjs/dist-ssr
 fundamentos/01-fundamentos-reactjs/*.local
-fundamentos/01-fundamentos-reactjs/# Editor directories and files
 fundamentos/01-fundamentos-reactjs/.vscode/*
 fundamentos/01-fundamentos-reactjs/!.vscode/extensions.json
 fundamentos/01-fundamentos-reactjs/.idea
@@ -31,7 +30,6 @@ fundamentos/01-fundamentos-reactjs-ts/node_modules
 fundamentos/01-fundamentos-reactjs-ts/dist
 fundamentos/01-fundamentos-reactjs-ts/dist-ssr
 fundamentos/01-fundamentos-reactjs-ts/*.local
-fundamentos/01-fundamentos-reactjs-ts/# Editor directories and files
 fundamentos/01-fundamentos-reactjs-ts/.vscode/*
 fundamentos/01-fundamentos-reactjs-ts/!.vscode/extensions.json
 fundamentos/01-fundamentos-reactjs-ts/.idea
@@ -41,3 +39,45 @@ fundamentos/01-fundamentos-reactjs-ts/*.ntvs*
 fundamentos/01-fundamentos-reactjs-ts/*.njsproj
 fundamentos/01-fundamentos-reactjs-ts/*.sln
 fundamentos/01-fundamentos-reactjs-ts/*.sw?
+
+fundamentos/desafio/logs
+fundamentos/desafio/*.log
+fundamentos/desafio/npm-debug.log*
+fundamentos/desafio/yarn-debug.log*
+fundamentos/desafio/yarn-error.log*
+fundamentos/desafio/pnpm-debug.log*
+fundamentos/desafio/lerna-debug.log*
+fundamentos/desafio/node_modules
+fundamentos/desafio/dist
+fundamentos/desafio/dist-ssr
+fundamentos/desafio/*.local
+fundamentos/desafio/.vscode/*
+fundamentos/desafio/!.vscode/extensions.json
+fundamentos/desafio/.idea
+fundamentos/desafio/.DS_Store
+fundamentos/desafio/*.suo
+fundamentos/desafio/*.ntvs*
+fundamentos/desafio/*.njsproj
+fundamentos/desafio/*.sln
+fundamentos/desafio/*.sw?
+
+hooks/02-ignite-timer/logs
+hooks/02-ignite-timer/*.log
+hooks/02-ignite-timer/npm-debug.log*
+hooks/02-ignite-timer/yarn-debug.log*
+hooks/02-ignite-timer/yarn-error.log*
+hooks/02-ignite-timer/pnpm-debug.log*
+hooks/02-ignite-timer/lerna-debug.log*
+hooks/02-ignite-timer/node_modules
+hooks/02-ignite-timer/dist
+hooks/02-ignite-timer/dist-ssr
+hooks/02-ignite-timer/*.local
+hooks/02-ignite-timer/.vscode/*
+hooks/02-ignite-timer/!.vscode/extensions.json
+hooks/02-ignite-timer/.idea
+hooks/02-ignite-timer/.DS_Store
+hooks/02-ignite-timer/*.suo
+hooks/02-ignite-timer/*.ntvs*
+hooks/02-ignite-timer/*.njsproj
+hooks/02-ignite-timer/*.sln
+hooks/02-ignite-timer/*.sw?
