Adicionando aplicação dt-money

--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,24 @@ hooks/02-ignite-timer/*.ntvs*
 hooks/02-ignite-timer/*.njsproj
 hooks/02-ignite-timer/*.sln
 hooks/02-ignite-timer/*.sw?
+
+http-performance/dt-money/logs
+http-performance/dt-money/*.log
+http-performance/dt-money/npm-debug.log*
+http-performance/dt-money/yarn-debug.log*
+http-performance/dt-money/yarn-error.log*
+http-performance/dt-money/pnpm-debug.log*
+http-performance/dt-money/lerna-debug.log*
+http-performance/dt-money/node_modules
+http-performance/dt-money/dist
+http-performance/dt-money/dist-ssr
+http-performance/dt-money/*.local
+http-performance/dt-money/.vscode/*
+http-performance/dt-money/!.vscode/extensions.json
+http-performance/dt-money/.idea
+http-performance/dt-money/.DS_Store
+http-performance/dt-money/*.suo
+http-performance/dt-money/*.ntvs*
+http-performance/dt-money/*.njsproj
+http-performance/dt-money/*.sln
+http-performance/dt-money/*.sw?
